# cpp20-modules

./: CMakeLists.txt  clang_modules.cmake  gcc_modules.cmake
src/cmd/: CMakeLists.txt
src/lib/: CMakeLists.txt  foo.cxx
